--- a/modules/lang/lua/README.org
+++ b/modules/lang/lua/README.org
@@ -24,18 +24,21 @@ Adds Lua support to Doom Emacs
 + REPL
 + Love2D specific functions
 + Moonscript support
++ Fennel support
 
 ** Maintainers
 This module has no dedicated maintainers.
 
 ** Module Flags
 + =+moonscript= Moonscript language support
++ =+fennel= Fennel language support
 + =+lsp= Language Server Protocol support
 
 ** Plugins
 # A list of linked plugins
 + [[https://github.com/immerrr/lua-mode][lua-mode]]
 + [[https://github.com/k2052/moonscript-mode][moonscript-mode]] (=+moonscript=)
++ [[https://gitlab.com/technomancy/fennel-mode][fennel-mode]] (=+fennel=)
 
 * Prerequisites
 ** Language Server Protocol servers
